# iubeo

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENCE  README.md  pyproject.toml
.github/workflows/: tests.yml
iubeo/: __init__.py  casters.py  config.py  exceptions.py  utils.py
tests/: test_iubeo.py  test_iubeo_casters.py  test_iubeo_config.py  test_iubeo_utils.py
