[tool.poetry]
name = "iubeo"
version = "0.2.2"
description = "Friendlier way to write your config."
authors = ["isik-kaplan <isik.kaplan@outlook.com>"]

license = "MIT"
readme = "README.md"

homepage = "https://github.com/isik-kaplan/iubeo"
repository = "https://github.com/isik-kaplan/iubeo"
documentation = "https://github.com/isik-kaplan/iubeo"

keywords = []
classifiers = [
    "Topic :: Software Development",
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Development Status :: 3 - Alpha',
]

requires-python = ">=3.5"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/isik-kaplan/django_http_exceptions"
