[project]
name = "iubeo"
version = "0.4.1"
description = "Friendlier way to write your config."
authors = [
  { name = "Işık Kaplan", email = "isik.kaplan@outlook.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.5"
keywords = [
  "config",
  "configuration",
  "environment"
]
classifiers = [
  "Topic :: Software Development",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable"
]
python = "^3.6.1"

[project.optional-dependencies]
dev = [
  "pytest >=5.2",
  "pre-commit >=2.9.3"
]

[project.urls]
Homepage = "https://github.com/isik-kaplan/iubeo"
Repository = "https://github.com/isik-kaplan/iubeo"
Documentation = "https://github.com/isik-kaplan/iubeo"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
